Corrected link to T3

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     all areas of computing, especially in cryptography. You may
     see this reflected in personal projects of mine. -->
 
-        <a class="link" href="https://jbwx.github.io/Page/T3.html/" target="_self">T3.cmd</a> <br>
+        <a class="link" href="https://jbwx.github.io/T3/" target="_self">T3.cmd</a> <br>
         <a class="link" href="https://jbwx.github.io/CaMEO/index.html" target="_self">CaMEO Index</a> <br>
         <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">O(1)-Time Hash Function</a> <br>
         <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">True Coinflip</a> <br>
