--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
         <a class="link" href="https://jbwx.github.io/T3/" target="_self">T3.cmd</a> <br>
         <a class="link" href="https://jbwx.github.io/CaMEO/index.html" target="_self">CaMEO Index</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">O(1)-Time Hash Function</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">True Coinflip</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">Meshnet Communication Protocol</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">Offline Search Engine</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">Decentralized Open-World Game</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/rats.html" target="_self">Venus Stuff</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">O(1)-Time Hash Function</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">True Coinflip</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Meshnet Communication Protocol</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Offline Search Engine</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Decentralized Open-World Game</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Venus Stuff</a> <br>
         <a class="link" href="mailto:jacobwestra0@gmail.com" target="_self">Resume</a>
 
        
