--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <a class="link" href="https://jbwx.github.io/T3/" target="_self">T3.cmd</a> <br>
         <a class="link" href="https://jbwx.github.io/CaMEO/index.html" target="_self">CaMEO Index</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">O(1)-Time Hash Function</a> <br>
+        <a class="link" href="https://jbwx.github.io/MicroHash" target="_self">O(1)-Time Hash Function</a> <br>
         <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">True Coinflip</a> <br>
         <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Meshnet Communication Protocol</a> <br>
         <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Offline Search Engine</a> <br>
