Update to include new personal projects

--- a/index.html
+++ b/index.html
@@ -43,16 +43,13 @@
     all areas of computing, especially in cryptography. You may
     see this reflected in personal projects of mine. -->
 
+        <a class="link" href="https://jbwx.github.io/TerrainGenerator/" target="_self">Terrain Generator</a> <br>
         <a class="link" href="https://jbwx.github.io/T3/" target="_self">T3.cmd</a> <br>
-        <a class="link" href="https://jbwx.github.io/CaMEO/index.html" target="_self">CaMEO Index</a> <br>
-        <a class="link" href="https://jbwx.github.io/MicroHash" target="_self">O(1)-Time Hash Function</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">True Coinflip</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Meshnet Communication Protocol</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Offline Search Engine</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Decentralized Open-World Game</a> <br>
-        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Venus Stuff</a> <br>
+        <a class="link" href="https://jbwx.github.io/CaMEO/index.html" target="_self">CaMEO</a> <br>
+        <a class="link" href="https://jbwx.github.io/MicroHash" target="_self">Hash Function</a> <br>
+        <a class="link" href="https://jbwx.github.io/CoffeeMonitor/" target="_self">CoffeeMonitor</a> <br>
+        <a class="link" href="https://jbwx.github.io/about/404.html" target="_self">Open-World Game</a> <br>
         <a class="link" href="mailto:jacobwestra0@gmail.com" target="_self">Resume</a>
-
        
     </p>
 
