--- a/contact/index.html
+++ b/contact/index.html
@@ -150,8 +150,8 @@
     <nav>
         <a href="https://jacobwestra.com" class="JW">Jacob Westra</a>
         <a href="https://calvinchimes.org/staff_name/jacob-westra/">Articles</a>
-        <a href="resume">Resume</a>
-        <a href="contact">Contact</a>
+        <a href="https://jacobwestra.com/resume">Resume</a>
+        <a href="https://jacobwestra.com/contact">Contact</a>
     </nav>
     <div class="container">
         <h2>Contact</h2>
