Update info on homepage
Also fix some mobile styling issues

--- a/resume/index.html
+++ b/resume/index.html
@@ -116,7 +116,12 @@
                 .bottomText {
                 margin-left:3vw;
                 color:darkgrey;
-            }
+                font-size: 8pt;
+                }
+
+                .bottomText a {
+                font-size: 8pt;
+                }
 
                 .container {
                 margin-left: 3vw;
@@ -141,6 +146,28 @@
                 nav a {
                 padding-top:3vw;
                 padding-bottom: 3vw;
+            }
+
+            .enterButton {
+                font-family: 'Tahoma';
+                font-size: 12pt;
+                margin: 0;
+                padding: 1.4vw;
+                background-color: #0074d9;
+                color: #ffffff;
+                border-radius: 4pt;
+                border: none;
+        }
+
+            .passwordInput {
+                font-family: 'Tahoma';
+                font-size: 12pt;
+                margin: 0;
+                padding: 1.4vw;
+                background-color: rgb(82, 82, 82);
+                color: #ffffff;
+                border-radius: 4pt;
+                border: none;
             }
         }
 
