Fix font issues

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
     @font-face {
-        font-family: 'Frygia' !important;
-        src: url('Frygia-Regular.ttf') format('truetype'),
-             url('Frygia-Regular.woff') format('woff'),
-             url('Frygia-Regular.woff2') format('woff2');
+      font-family: 'Frygia-Bold';
+      src: url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.ttf'),
+           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.woff'),
+           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.woff2');
+    }
+
+    @font-face {
+      font-family: 'Frygia';
+      src: url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.ttf'),
+           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.woff'),
+           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.woff2');
     }
 
   body {
@@ -28,7 +35,7 @@
     white-space: nowrap;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Frygia-Bold', sans-serif !important;
+    font-family: 'Frygia-bold', sans-serif !important;
     font-size: 61pt;
     color:#1c1c1c;
     margin-bottom: 20pt;
@@ -40,7 +47,7 @@
     margin-right: 55%;
     margin-top: 15vh;
     font-size: 12pt;
-    font-family: 'Frygia-Regular', Arial;
+    font-family: 'Frygia', Arial;
     color: #1c1c1c;
   }
 
