Fix mobile issues

--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@ a:hover::before {
   padding-bottom: 0px;
 }
 
+@media only screen and (max-width: 1200px) {
+  #mainText {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 50pt;
+  }
+  
+  #title {
+    font-size: 45pt;
+  }
+
+  .spacer {
+    padding-right: 34pt;
+  }
+  
+}
+
 
 </style>
 </head>
