Fix font weight issues for mobile

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	text-decoration: none;
 	color: #18272F;
 	font-weight: 700;
+  font-family: 'Frygia-bold';
   position: relative;
   white-space: nowrap;
 }
@@ -141,10 +142,6 @@ a:hover::before {
 .links {
   margin-top: 70pt;
   margin-bottom: 50pt;
-}
-
-.subtitle {
-  font-weight: 700;
 }
 
 .links a::before {
