Fix gradient & size issues on mobile

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
   a {
 	text-decoration: none;
 	color: #18272F;
-	font-weight: 700;
   font-family: 'Frygia-bold';
   position: relative;
   white-space: nowrap;
@@ -174,11 +173,19 @@ a:hover::before {
   }
   
   #title {
-    font-size: 45pt;
+    font-size: 40pt;
   }
 
   .spacer {
-    padding-right: 34pt;
+    padding-right: 20pt;
+  }
+
+  #textInput {
+    border-radius: 0;
+  }
+
+  body {
+    height: 1500pt;
   }
   
 }
