--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ a:hover::before {
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 50pt;
+    white-space:nowrap;
   }
   
   #title {
