Fix Mastodon verification

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Mastodon verification -->
-<a rel="me" href="https://mastodon.social/@jbwx">Mastodon</a> 
 <title>Jacob Westra</title>
 <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
@@ -242,7 +240,7 @@ a:hover::before {
         </div>
 
           <div class="links">
-            <a href="https://www.linkedin.com/in/jbwx/">LinkedIn</a><span class="spacer"></span><a href="https://github.com/jbwx">Github</a> <span class="spacer"></span><a href="https://www.kaggle.com/westrajacob">Kaggle</a> <span class="spacer"></span><a href="https://mastodon.social/@jbwx">Mastodon</a>
+            <a href="https://www.linkedin.com/in/jbwx/">LinkedIn</a><span class="spacer"></span><a href="https://github.com/jbwx">Github</a> <span class="spacer"></span><a href="https://www.kaggle.com/westrajacob">Kaggle</a> <span class="spacer"></span><a rel="me" href="https://mastodon.social/@jbwx">Mastodon</a>
           </div>
 
     </div>
