graduated + new job

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
   a {
 	text-decoration: none;
 	color: #18272F;
-  font-family: 'Frygia-bold';
+  font-family: 'Frygia-bold', Arial;
+  font-weight: bold;
   position: relative;
   white-space: nowrap;
 }
@@ -197,33 +198,32 @@ a:hover::before {
 <body>
     <div id="mainText">
         <div id="title"></div>
-        I'm Jacob Westra. I'm a <span class="ht">web developer</span> from <s>Holland</s> Grand Rapids, MI.
+        I'm Jacob Westra. I'm a <span class="ht">software developer</span> from <s>Holland</s> Grand Rapids, MI.
         <div class="parag">
-          I'm currently studying computer science at Calvin University.
-          I have a passion for ethics in computer science, and love giving an easy-to-understand perspective for all things STEM, which is why I’m a reporter for Calvin’s student newspaper, <a href="https://calvinchimes.org">the Chimes</a>, covering <a href="https://calvinchimes.org/staff_name/jacob-westra/">science & technology</a>. I’m also the resident web developer for their website, calvinchimes.org.
+          I'm currently doing software development for <a href="https://thekairosmedia.com/"> Kairos Media</a>, a small videography & marketing company in Grand Rapids.
+        </div>
+        <div class="parag">
+          I'm a recent graduate of Calvin University, where I studied computer science. There, I was the <a href="https://calvinchimes.org/staff_name/jacob-westra/">science & technology</a> reporter for Calvin University's student newspaper, <a href="https://calvinchimes.org">the Chimes</a>. I was also the resident web developer for their website, calvinchimes.org.
         </div>
         <div class="parag" style="animation-delay: 1.8s;">
-          I’m also currently working on a <a href="LGWI/"> project </a> to monitor well-water usage in remote villages in Ecuador, through <a href="https://www.lifegivingwaterinternational.org/">Life Giving Water International</a>.
+          My <a href="LGWI/">senior project</a> at Calvin involved building an app for a Christian NGO, <a href="https://www.lifegivingwaterinternational.org/">Life Giving Water International</a>, to monitor well-water usage in remote villages in Ecuador.
         </div>
         <div class="parag" style="animation-delay: 2.1s;">
-          Starting in March, I’ll be working on an interactive molecular biology article with Massachusetts-based startup <a href="https://www.dynotx.com/">Dyno Therapeutics</a>, through the <a href="https://www.openavenuesfoundation.org/">Open Avenues Foundation</a>.
+          My senior year at Calvin, I also worked on an <a href="/venus/"> interactive molecular biology article </a> with Massachusetts-based startup <a href="https://www.dynotx.com/">Dyno Therapeutics</a>, through the <a href="https://www.openavenuesfoundation.org/">Open Avenues Foundation</a>.
         </div>
         <div class="parag" style="animation-delay: 2.4s;">
           Additionally, I was an overnight camp counselor at <a href="https://camproger.org">Camp Roger</a> this past summer. It felt great giving back to the community I love, and fostering genuine connections between kids and nature.
         </div>
-        <div class="parag" style="animation-delay: 2.7s;">
-          I’m also currently looking for a job after graduation! If you’re a local company with a care for sustainability and helping the local community, I’d love to get in contact! My <a href="#contact">resume and contact info</a> may be of help.
-        </div>
 
         <!-- work I've done -->
 
-        <div class="parag" style="animation-delay: 3.3s;">
+        <div class="parag" style="animation-delay: 2.7s;">
           My sophomore and junior years at Calvin, I helped lead the student organization <a href="https://abs.calvin.edu">Abstraction</a>. Abstraction is Calvin's computer science club, with around 50 members. I helped organize and lead events, design posters, and manage costs.
         </div>
-        <div class="parag" style="animation-delay: 3.6s;">
+        <div class="parag" style="animation-delay: 3.0s;">
           I've also volunteered for several organizations, such as <a href="https://asphome.org/">Appalachia Service Project</a>, <a href="https://compheart.org/">Compassionate Heart Ministries</a>, <a href="https://www.feedwm.org/">Feeding America West Michigan</a>, and <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.
         </div>
-        <div class="parag" style="animation-delay: 3.9s;">
+        <div class="parag" style="animation-delay: 3.3s;">
           I've also worked as a student intern at <a href="https://yanfeng.com">Yanfeng Automotive Interiors</a>. It was my first "office job", and I dealt with pricing for Chrysler-Fiat/Stellantis. I had worked on the factory floor in summers prior, and it was interesting seeing my work from another perspective.
         </div>
 
@@ -231,11 +231,11 @@ a:hover::before {
 
         <span id="contact"></span>
 
-        <div class="parag" style="animation-delay: 4.2s;">
+        <div class="parag" style="animation-delay: 3.6s;">
           If you can recall the password from the business card or resume I gave you, <input type="text" id="textInput" placeholder="type it here." oninput="submit()">
         </div>
 
-        <div class="parag" style="animation-delay: 4.5s;">
+        <div class="parag" style="animation-delay: 3.9s;">
           You can reach me at me@jacobwestra.com. For anything Calvin/Chimes-related, contact me at jbw23@calvin.edu. My more sensitive contact information can be found on my business card or resume.
         </div>
 
