--- a/index.html
+++ b/index.html
@@ -6,19 +6,33 @@
         <title>Jacob Westra</title>
         <link rel="icon" type="image/x-icon" href="favicon.png" />
         <style>
-            /* @font-face {
-      font-family: 'Frygia-Bold';
-      src: url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.ttf'),
-           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.woff'),
-           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Bold.woff2');
-    }
+            @font-face {
+                font-family: "Frygia-Bold";
+                src:
+                    url("https://jacobwestra.com/Frygia-Bold.woff2")
+                        format("woff2"),
+                    url("https://jacobwestra.com/Frygia-Bold.woff")
+                        format("woff"),
+                    url("https://jacobwestra.com/Frygia-Bold.ttf")
+                        format("truetype");
+                font-weight: bold;
+                font-style: normal;
+                font-display: swap;
+            }
 
-    @font-face {
-      font-family: 'Frygia';
-      src: url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.ttf'),
-           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.woff'),
-           url('https://en.bestfonts.pro/fonts_files/632379114bf8d619a17301ee/files/Frygia-Regular.woff2');
-    } */
+            @font-face {
+                font-family: "Frygia";
+                src:
+                    url("https://jacobwestra.com/Frygia-Regular.woff2")
+                        format("woff2"),
+                    url("https://jacobwestra.com/Frygia-Regular.woff")
+                        format("woff"),
+                    url("https://jacobwestra.com/Frygia-Regular.ttf")
+                        format("truetype");
+                font-weight: normal;
+                font-style: normal;
+                font-display: swap;
+            }
 
             body {
                 height: 1200pt;
