--- a/index.html
+++ b/index.html
@@ -378,107 +378,15 @@
         typeWriter();
     </script>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V1SB2MBQQK"></script>
     <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyCaSavy7-SaJXk_e8zfzKj_oU9Cnofsyuw",
-            authDomain: "xr-tag.firebaseapp.com",
-            projectId: "xr-tag",
-            storageBucket: "xr-tag.appspot.com",
-            messagingSenderId: "647326155458",
-            appId: "1:647326155458:web:f1f7ec62eb899338d5f15b",
-            measurementId: "G-H9JGG5HYMB",
-        };
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        firebase.initializeApp(firebaseConfig);
-
-        // Get a reference to the Firestore database
-        const firestore = firebase.firestore();
+      gtag('config', 'G-V1SB2MBQQK');
     </script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <script>
-        // script for firebase API stuff
-        let xip = "";
-        $.getJSON("https://api.ipify.org/?format=json", function (e) {
-            xip = e.ip;
-            writeEntry(e.ip);
-        });
-        // log your ip address, tehehe :3
-        function writeEntry(ip) {
-            const newEntry = {
-                IPaddr: ip,
-                Ref: document.referrer,
-                Timestamp: getTD(),
-            };
-
-            // Add the entry to the database
-            firestore
-                .collection("PortfolioTrack")
-                .doc(xip + ": " + getTD())
-                .set(newEntry);
-        }
-
-        // i got this from somewhere on stackoverflow. Source: i forgor
-        // slightly modified by me
-        function getTD() {
-            var now = new Date(), // current date
-                months = ["January", "February", "..."]; // you get the idea
-            m = "am";
-            hrs = now.getHours();
-            if (now.getHours() > 12) {
-                m = "pm";
-                hrs = hrs % 12;
-            }
-            time = hrs + ":" + now.getMinutes() + " " + m; // again, you get the idea
-
-            // a cleaner way than string concatenation
-            date = [
-                now.getDate(),
-                months[now.getMonth()],
-                now.getFullYear(),
-            ].join(" ");
-
-            const weekday = [
-                "Sunday",
-                "Monday",
-                "Tuesday",
-                "Wednesday",
-                "Thursday",
-                "Friday",
-                "Saturday",
-            ];
-            const mons = [
-                "January",
-                "February",
-                "March",
-                "April",
-                "May",
-                "June",
-                "July",
-                "August",
-                "September",
-                "October",
-                "November",
-                "December",
-            ];
-
-            // set the content of the element with the ID time to the formatted string
-
-            return (
-                time +
-                ", " +
-                (weekday[now.getDay()] +
-                    ", " +
-                    mons[now.getMonth()] +
-                    " " +
-                    now.getUTCDate() +
-                    ", " +
-                    now.getFullYear())
-            );
-        }
     </script>
 
     <script>
